gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail2361.d
version https://git-lfs.github.com/spec/v1
oid sha256:2d1110e30777d8037a4b5521ad05e3da6f99657c7e4243bc6fc8994608f87e1e
size 294
